--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,12 @@
         android:theme="@style/Theme.MySocialApp"
         tools:targetApi="31">
         <activity
+            android:name=".PostDetailActivity"
+            android:exported="false" />
+        <activity
+            android:name=".notifications.PostDetailActivity"
+            android:exported="false" />
+        <activity
             android:name=".ThereProfileActivity"
             android:exported="false" />
         <activity
