--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,12 @@
         android:theme="@style/Theme.MySocialApp"
         tools:targetApi="31">
         <activity
+            android:name=".GroupEditActivity"
+            android:exported="false" />
+        <activity
+            android:name=".GroupInfoActivity"
+            android:exported="false" />
+        <activity
             android:name=".GroupParticipantAddActivity"
             android:exported="false" />
         <activity
